--- a/public/style.css
+++ b/public/style.css
@@ -8,9 +8,15 @@
    font-family: 'PT Serif', serif;
 }
 
+body {
+   height: 100%;
+   overflow: scroll;
+}
+
 .movies-body{
    background-color: rgb(36, 35, 35);
 }
+
 
 header{
    width: 100%;
@@ -20,10 +26,11 @@ header{
    color: white;
    font-size: 3em;
    text-align: center;
+   scroll-snap-stop: normal;
+   scroll-snap-align: center;
 }
 
 .footer {
-   position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
@@ -32,6 +39,8 @@ header{
    background-color: black;
    color: white;
    text-align: center;
+   scroll-snap-stop: normal;
+   scroll-snap-align: center;
 }
 
 .container {
@@ -39,6 +48,13 @@ header{
    flex-wrap: wrap;
    justify-content: center;
    padding-bottom: 2%;
+}
+
+.container-alt{
+   height: 100vh;
+   width: 100%;
+   overflow: scroll;
+   scroll-snap-type: y mandatory;
 }
 
 .card {
@@ -55,6 +71,39 @@ header{
 .title-overview{
    display: flex;
    flex-direction: column;
+}
+
+.backdrop{
+   width: 100%;
+   height: 100vh;
+   position: relative;
+   scroll-snap-align: start;
+   scroll-snap-stop: always;
+   background-repeat:no-repeat;
+   background-size: cover;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+}
+
+movie{
+   font-size: 5em;
+   text-align: center;
+   color: aliceblue;
+   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+   outline-color: black;
+   align-self: center;
+}
+
+overview{
+   align-self: center;
+   font-size: 1.5em;
+   color: aliceblue;
+   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+   outline-color: black;
+   margin: 30% 5% 0% 5%;
+   padding: 2%;
+   background-color: rgba(0, 0, 0, 0.5);
 }
 
 .card-title{
@@ -83,6 +132,8 @@ header{
    border-radius: 50%;
 }
 
+
+
 @media screen and (min-width: 600px) {
    .card {
       flex: 1 1 calc(50% - 2rem);
@@ -94,3 +145,4 @@ header{
       flex: 1 1 calc(33% - 2rem);
    }
 }
+
